@@ -14,6 +14,8 @@ https://github.com/elastic/beats/compare/v5.1.1...5.1[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Renamed the following settings of the decode_json_fields processor: maxDepth to max_depth and processArray to process_array. {pull}3111[3111]
+
 *Metricbeat*
 
 *Packetbeat*
